# SWARMICA

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION_CERTIFICATE.txt  COMPLETION_INVENTORY.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  upload_swarmica.py  upload_swarmica.py.bak  versions_index.md
benchmarks/: __init__.py  ablation_study.py  run_all_scenarios.py
configs/: clo_config.yaml  epfe_config.yaml  kpsl_config.yaml
docs/: api_reference.md  index.md  math_appendix.md
examples/: generate_report.py  ground_convoy.py  mixed_swarm.py  quick_start.py
notebooks/: README.md
paper/: README.md
scripts/: install_deps.sh  run_validation.sh
swarmica/: __init__.py
tests/: run_tests.py  test_energy_functional.py  test_pde_operators.py  test_pde_operators_v4.py  test_swarmica.py
training/: __init__.py
v1.0/: README.md  VERSION
v10.0/: README.md  VERSION  requirements.txt
v11.0/: README.md  VERSION  requirements.txt
v12.0/: README.md  VERSION  requirements.txt
v13.0/: README.md  VERSION  requirements.txt
v2.0/: README.md  VERSION  requirements.txt
v2.0/streamlit/: app.py
v3.0/: README.md  VERSION  requirements.txt
v4.0/: README.md  VERSION  requirements.txt
v5.0/: README.md  VERSION  requirements.txt
v6.0/: README.md  VERSION  requirements.txt
v7.0/: README.md  VERSION  requirements.txt
v8.0/: README.md  VERSION  requirements.txt
v9.0/: README.md  VERSION  requirements.txt
(+244 files in other folders)
